Lock scrollbar in on html to avoid jumping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,9 @@
 /* Showtime fonts */
 @import url("../fonts/web/showtime.css");
 
+html {
+  overflow: hidden scroll;
+}
 html,
 body {
   padding: 0;
